Fixed link to gSchool Goals

--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
     	</header>
         <nav>
                 <a href="index.html">Home</a>&nbsp; &nbsp;
-                <a hre="gSchoolgoals.html">gSchool Goals</a>&nbsp; &nbsp;
+                <a href="gSchoolgoals.html">gSchool Goals</a>&nbsp; &nbsp;
 
         </nav>
 
