--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="wrapper">
     	<header>
-    		<h1>Ellen Steube<h1>
+    		<h1>Ellen Steube</h1>
     	</header>
         <nav>
                 <a href="index.html">Home</a>&nbsp; &nbsp;
